[package]
name = "rnest-di"
version = "0.1.0"
authors = ["wangqj <qpalzmqaz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnest-error = { path = "../rnest-error" }

futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }

[dev-dependencies]
tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded"] }
