[package]
name = "rnest-macros"
version = "0.1.0"
authors = ["wangqj <qpalzmqaz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.54", features = ["full"] }
syn-serde = { version = "0.2.0", features = ["json"] }
quote = "1.0.7"
proc-macro2 = "1.0.24"
regex = "1.4.2"
proc-macro-error = "1.0.4"