[package]
name = "rnest"
version = "0.2.0"
authors = ["wangqj <qpalzmqaz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnest-error = { path = "../rnest-error" }
rnest-di = { path = "../rnest-di" }
rnest-macros = { path = "../rnest-macros" }

async-trait = "0.1.42"
log = "0.4.11"
actix-web = { version = "4.0.1", default-features = false, features = ["macros"] }
serde_json = { version = "1.0.65", default-features = false }

[dev-dependencies]
env_logger = "0.8.2"
serde = { version = "1.0.118" }
