[package]
name = "rnest"
version = "0.2.0"
authors = ["wangqj <qpalzmqaz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnest-error = { path = "../rnest-error" }
rnest-di = { path = "../rnest-di" }
rnest-macros = { path = "../rnest-macros" }

async-trait = "0.1"
log = "0.4"
actix-web = { version = "4", default-features = false }
serde_json = { version = "1", default-features = false }
actix-web-validator = { version = "5", default-features = false }

[dev-dependencies]
env_logger = "0.9"
serde = { version = "1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16", features = ["derive"] }
