[package]
name = "rnest"
version = "0.0.0"
edition = "2021"
description = "A rust web framework similar to nestjs"
repository = "https://github.com/qpalzmqaz123/rnest.git"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous", "web-programming::http-server", "web-programming::websocket"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
